# LCMP

./: .gitignore  ELECTRON_DESIGN_ANALYSIS.md  PLAYER_CORE_LOGIC.md  README.md  TAURI_PROJECT_DESIGN.md  index.html  package-lock.json  package.json  run-tauri-dev-vs.ps1  run-tauri-dev.bat  run-tauri-dev.ps1  setup-vs-env.bat  tailwind.config.ts  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: database.db
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: dashboard.rs  folder.rs  mod.rs  player.rs  playlist.rs  settings.rs  song.rs
src-tauri/src/database/: connection.rs  migrations.rs
src-tauri/src/models/: folder.rs  mod.rs  playlist.rs  song.rs  tag.rs
src/components/: AlbumArtImage.tsx  ColumnSelectorDialog.tsx  DashboardView.tsx  FolderModal.tsx  MetadataModal.tsx  PlayerControls.tsx  PlaylistModal.tsx  PlaylistSelectModal.tsx  PlaylistView.tsx  QueueView.tsx  SettingsModal.tsx  Sidebar.tsx  SidebarContextMenu.tsx  SongContextMenu.tsx  TagModal.tsx  TitleBar.tsx  WaveformWidget.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  label.tsx  toast.tsx  tooltip.tsx
src/hooks/: useEscapeToClose.ts  useModalBodyClass.ts
src/lib/: albumArt.ts  tauri.ts
src/stores/: dashboardStore.ts  folderStore.ts  playerStore.ts  playlistStore.ts  queueStore.ts  songStore.ts  tableColumnsStore.ts  toastStore.ts  viewStore.ts
src/styles/: index.css
src/types/: index.ts
