[package]
name = "local-music-player"
version = "0.1.0"
description = "Tag-based music player with modern UI"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-dir", "fs-exists", "fs-write-file", "fs-copy-file", "fs-rename-file", "fs-read-file", "dialog-open", "fs-remove-file", "fs-remove-dir", "fs-create-dir", "dialog-save", "shell-open", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
symphonia = { version = "0.5", features = ["all"] }
rayon = "1.8"  # 병렬 처리 라이브러리

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

